@@ -12,8 +12,6 @@ matrix:
           env: TOXENV=py35
         - python: 3.6
           env: TOXENV=py36
-        - python: 3.6
-          env: TOXENV=py36-betacairocffi
         - python: nightly
           env: TOXENV=py-nightly
 
