@@ -18,6 +18,8 @@ python_version = 2.7
 ignore_missing_imports = True
 [mypy-cairocffi._ffi]
 ignore_missing_imports = True
+[mypy-cairocffi.pixbuf]
+ignore_missing_imports = True
 [mypy-libqtile._ffi_pango]
 ignore_missing_imports = True
 [mypy-libqtile._ffi_xcursors]
