@@ -27,6 +27,7 @@ from libqtile.bar import Bar
 from libqtile.widget import TextBox, ThermalSensor
 from ..conftest import BareConfig
 
+
 class ColorChanger(TextBox):
     count = 0
 
@@ -44,6 +45,7 @@ class WidgetTestConf(BareConfig):
 
 
 widget_conf = pytest.mark.parametrize("qtile", [WidgetTestConf], indirect=True)
+
 
 @widget_conf
 def test_textbox_color_change(qtile):
