@@ -7,7 +7,6 @@ envlist =
     py34,
     py35,
     py36,
-    py36-betacairocffi,
     pypy-trollius,
     pypy3-trollius,
     py-nightly
@@ -57,14 +56,3 @@ commands = mypy -p libqtile
 [testenv:docs]
 deps = -r{toxinidir}/docs/requirements.txt
 commands = sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
-
-[testenv:py36-betacairocffi]
-deps =
-    pytest-cov
-    xvfbwrapper
-commands =
-    pip install xcffib
-    pip install -r {toxinidir}/requirements.in
-    pip install --ignore-installed --no-deps --no-cache-dir --force-reinstall git+https://github.com/Kozea/cairocffi.git@master
-    python {toxinidir}/libqtile/ffi_build.py
-    py.test --cov libqtile --cov-report term-missing {posargs}
